added missing endpoints for admin panel and updated openapi.yaml
